# social_network

./: .gitignore  Makefile  README.md  makefile_TXT.TXT  pyproject.toml  setup.cfg
yatube/about/: apps.py  tests.py
yatube/core/: apps.py  models.py  utils.py  views.py
yatube/posts/: admin.py  models.py  urls.py  views.py
yatube/posts/migrations/: 0001_initial.py  0002_auto_20220921_0209.py  0003_auto_20220924_0311.py  0004_auto_20221009_0128.py  0005_auto_20221013_0228.py  0006_auto_20221014_2105.py  0007_auto_20221016_0716.py  0008_auto_20221029_0433.py  0009_comment.py  0010_auto_20221031_0522.py  0011_auto_20221031_0559.py  0012_auto_20221101_1502.py  0012_auto_20221110_0244.py  0013_auto_20221107_1036.py  0014_auto_20221107_1038.py
yatube/posts/tests/: common.py  consts.py  test_forms.py  test_models.py  test_urls.py  test_views.py
yatube/templates/: base.html
yatube/templates/about/: author.html  tech.html
yatube/templates/core/: 404.html
yatube/templates/includes/: form_field.html  header.html
yatube/templates/posts/: create_post.html  follow.html  group_list.html  index.html  post_detail.html  profile.html
yatube/templates/posts/includes/: comment.html  paginator.html  post.html  switcher.html
yatube/templates/users/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
yatube/users/: urls.py
yatube/users/tests/: test_forms.py  test_urls.py  test_views.py
yatube/yatube/: settings.py  urls.py
