[tool.poetry]
name = "yatube-project"
version = "0.1.0"
description = ""
authors = ["Ежов Валерий <ezhov.fzzz@gmail.com>"]
readme = "README.md"
packages = [{include = "yatube_project"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.16"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-absolute-import = "^1.0.0.1"
flake8-bugbear = "^22.9.11"
flake8-broken-line = "^0.5.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.4.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.2.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-quotes = "^3.3.1"
flake8-return = "^1.1.3"
flake8-simplify = "^0.19.3"
flake8-todo = "^0.7"
pep8-naming = "^0.13.2"
flake8-variables-names = "^0.0.5"
flake8-use-fstring = "^1.4"
black = "^22.8.0"
mypy = "^0.971"
atomicwrites = "1.4.0"
attrs = "19.3.0"
colorama = "0.4.4"
iniconfig = "1.1.1"
packaging = "20.1"
pluggy = "0.13.1"
py = "1.8.2"
pyparsing = "2.4.6"
pytest = "6.2.4"
pytest-django = "4.4.0"
pytest-pythonpath = "0.7.3"
pytz = "2019.3"
six = "1.16.0"
sqlparse = "0.3.0"
tomli = "2.0.0"
beautifulsoup4 = "^4.11.1"
certifi = "2019.9.11"
chardet = "3.0.4"
django-debug-toolbar = "2.2"
Faker = "12.0.1"
idna = "2.8"
importlib-metadata = "1.5.0"
mixer = "7.1.2"
more-itertools = "8.2.0"
requests = "2.26.0"
sorl-thumbnail = "12.7.0"
urllib3 = "1.25.6"
wcwidth = "0.1.8"
zipp = "2.2.0"
djhtml = "^1.5.2"
flake8-html = "^0.4.2"
coverage = "^6.5.0"
Pillow = "8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
